# ya-editor

./: README.md  pyproject.toml
src/ya_editor/: __init__.py  _const.py  _core.py  _utils.py
