[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ya-editor"
version = "0.0.2"
description = "Yandex translate, correct, rewrite, and improve for Russian and English"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "rnet-client>=0.0.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/imbecility/ya-editor"
